--- a/src/globals.css
+++ b/src/globals.css
@@ -10,6 +10,9 @@
     --primary: 80 87% 60%;
     --primary-foreground: 0 0% 100%;
 
+    --header: 85 87% 93%;
+    --header-foreground: 0 0% 100%;
+
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 10% 3.9%;
